saves/test/demo_full_20240802_193545/wire/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp wire_tb.v wire.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
wire_tb.v:77: $finish called at 56000 (1ps)

iverilog cmd 2 error:

